log

Thu 17 Aug 2023 08:00:54 PM UTC: 
 tests:  0|7
total_score: 0/70
b42eaed
Thu 17 Aug 2023 08:01:52 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:17: error: invalid initializer
   14 |     int max[] = arr[0];
      |                 ^~~
exercises.c:17:20: error: comparison between pointer and integer [-Werror]
   17 |         if (arr[i] < max) {
      |                    ^
exercises.c:18:18: error: assignment to expression with array type
   18 |              max = arr[i];
      |                  ^
exercises.c:21:12: error: returning ‘int *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Werror=int-conversion]
   21 |     return max;
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
76a8449
Thu 17 Aug 2023 08:02:48 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:18: error: invalid initializer
   14 |     int max[0] = arr[0];
      |                  ^~~
exercises.c:17:20: error: comparison between pointer and integer [-Werror]
   17 |         if (arr[i] < max) {
      |                    ^
exercises.c:18:18: error: assignment to expression with array type
   18 |              max = arr[i];
      |                  ^
exercises.c:21:12: error: returning ‘int *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Werror=int-conversion]
   21 |     return max;
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
23425de
Thu 17 Aug 2023 08:03:23 PM UTC: 
 exercises.c | 25 +++++++++++++------------
 1 file changed, 13 insertions(+), 12 deletions(-)
 tests:  0|6
total_score: 10/70
8235420
Thu 17 Aug 2023 08:03:49 PM UTC: 
 exercises.c | 31 ++++++++++++++++++++++++++++++-
 1 file changed, 30 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
0edc01a
Thu 17 Aug 2023 08:04:59 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
be2938f
Thu 17 Aug 2023 08:08:03 PM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|5
total_score: 20/70
5223d65
Thu 17 Aug 2023 08:08:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
fe53a81
